--- a/package.json
+++ b/package.json
@@ -10,12 +10,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.5.0",
+    "@tailwindcss/vite": "^4.0.9",
+    "axios": "^1.7.9",
+    "bcryptjs": "^2.4.3",
+    "bootstrap": "^5.1.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^6.4.3",
     "react-scripts": "^5.0.1",
     "react-slick": "^0.30.3",
+    "react-toastify": "^11.0.5",
     "sass": "^1.85.1",
     "slick-carousel": "^1.8.1"
   },
@@ -24,10 +31,13 @@
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
+    "autoprefixer": "^10.4.20",
     "eslint": "^9.21.0",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^3.4.17",
     "vite": "^6.2.0"
   }
 }
