--- a/package.json
+++ b/package.json
@@ -15,14 +15,17 @@
     "axios": "^1.7.9",
     "bcryptjs": "^2.4.3",
     "bootstrap": "^5.1.3",
+    "lodash": "^4.17.21",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^6.4.3",
     "react-scripts": "^5.0.1",
+    "react-select": "^5.10.1",
     "react-slick": "^0.30.3",
     "react-toastify": "^11.0.5",
+    "recharts": "^2.15.1",
     "sass": "^1.85.1",
     "slick-carousel": "^1.8.1"
   },
