--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-toastify": "^11.0.5",
     "recharts": "^2.15.1",
     "sass": "^1.85.1",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "yet-another-react-lightbox": "^3.21.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
