--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-scripts": "^5.0.1",
     "react-select": "^5.10.1",
     "react-slick": "^0.30.3",
+    "react-to-print": "^3.0.5",
     "react-toastify": "^11.0.5",
     "recharts": "^2.15.1",
     "sass": "^1.85.1",
